feat: adding news routes for employees users
